Fixed missing background colour issue in webkit and IE
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@874 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/GUI/Widgets/ScreenSettings/Web/GUIScreenSettings.css
+++ b/Systems/GUI/Widgets/ScreenSettings/Web/GUIScreenSettings.css
@@ -1,13 +1,17 @@
 .GUIScreenSettings {
     -moz-border-radius: 9px;
+    border-radius: 9px;
     border: 1px solid #B0B0B0;
 }
 
 .GUIScreenSettings-top {
     -moz-border-radius: 9px 9px 0 0;
+    border-radius: 9px 9px 0 0;
     background-color: #BBB;
     padding: 13px;
     background-image: -moz-linear-gradient(0% 0 -90deg, #F6F6F6, #AAA);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F6F6F6), to(#AAA));
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#F6F6F6, endColorstr=#AAA);
 }
 
 .GUIScreenSettings-title-value {
@@ -25,6 +29,8 @@
 .GUIScreenSettings-section-title {
     padding: 0 10px;
     background-image: -moz-linear-gradient(0% 0 -90deg, #F6F6F6, #BBB);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F6F6F6), to(#BBB));
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#F6F6F6, endColorstr=#BBB);
     line-height: 23px;
     font-size: 13px;
 }
